# api/controllers/community.js
@@ -3,30 +3,45 @@
 const _ = require('lodash');
 const db = require('../../db');
 
+// In this experiment seems that the result is an array of
+// "results" for each statement, e.g. for the begin, the
+// first select, etc.
+/* db.raw(`
+ *   BEGIN;
+ *   SELECT * FROM account;
+ *   SELECT * FROM deck;
+ *   COMMIT;
+ *   `).then( (result) => { console.log(result); } );*/
+
 module.exports = {
   searchPublicDecks,
+  getPublicDecksOfAuthor,
   addPublicDeckToUserCollection
 };
 
 function searchPublicDecks(request, response) {
   (async function() {
 
-    const query = request.query.q;
+    const search = request.query.q || '';
 
     let selectRows = undefined;
 
     try {
-      selectRows = await db.select('*')
-                           .from('deck')
-                           .where({
-                             is_public: 1,
-                           })
-                           .andWhere('name', 'ilike', '%'+query+'%');
+      let query = `
+SELECT deck.*, account.id as author, account.username as author_username
+FROM deck JOIN account ON deck.owner_id = account.id
+WHERE deck.is_public = 1
+      `;
 
-      db.raw(`
-        SELECT * FROM deck where is_public = 1;
-        `);
-      
+      if (search !== '')
+        query += `
+AND deck.name ILIKE '%${search}%'`;
+
+      query += ';';
+
+      selectRows = await db.raw(query);
+      selectRows = selectRows.rows;
+
       const responseObj = {
         data: selectRows.map(r => ({
           id: r.id,
@@ -42,14 +57,43 @@ function searchPublicDecks(request, response) {
       return response.status(400).json({ message: error });
     }
 
-    return response.json({
-      'data': {
-        'type': 'quiz',
-        'id': '7cd8d9c6-4c1d-488b-9137-a6906afaf3d4'
-      }
-    });
-
   }());
+}
+
+function getPublicDecksOfAuthor(request, response) {
+  (async function() {
+    console.log(request.swagger.params);
+    const authorId = request.swagger.params.authorId.value;
+
+    let query = `
+SELECT deck.*, account.id as author, account.username as author_username
+FROM deck JOIN account ON deck.owner_id = account.id
+WHERE deck.is_public = 1 AND account.id = '${authorId}';
+    `;
+
+    let selectResult;
+    let dataOfDecksByAuthor;
+
+    try {
+      selectResult = await db.raw(query);
+      dataOfDecksByAuthor = selectResult.rows;
+    } catch(error) {
+      console.error(error);
+      return repsonse.status(400).json({ message: error });
+    }
+
+    const responseObj = {
+      data: dataOfDecksByAuthor.map(r => ({
+        id: r.id,
+        type: 'deck',
+        attributes: _.omit(r, 'id')
+      }))
+    };
+    
+    response.json(responseObj);
+    
+    return 
+  }())
 }
 
 function addPublicDeckToUserCollection(request, response) {
